
2023-11-29  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>

	* common.c (cob_get_strerror), coblocal.h: export as utility function

2023-07-28  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c, common.c: replace use of NCURSES_MOUSE_VERSION by
	  HAVE_MOUSEMASK

2023-07-27  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* move.c (cob_move_display_to_packed): fix data corruption caused
	  by packing one extra digit from the input display field

2023-07-25  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_check_linkage_size), common.h: new function
	  to check for EC-PROGRAM-ARG-MISMATCH
	* common.c (raise_arg_mismatch): new function to provide a "virtual"
	  module entry for better error messages
	* common.c (call_exit_handlers_and_terminate, cob_runtime_error):
	  pass information about arguments to handlers written in COBOL
	* common.c (cob_stack_trace_internal): slightly improved stack output

2023-07-24  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c: only check -1 as invalid fd; return fileio status for
	  invalid file state in CBL_ routines, instead of fixed -1 / 35
	* call.c (cache_preload, cob_resolve_internal): runtime warning if
	  (pre)loading from existing path does not work
	* (cache_preload): runtime warning if preloading from existing path
	  does not work
	* call.c (cob_try_preload): runtime warning if preloading of
	  requested module does not work
	* (cob_resolve_internal): runtime warning if loading module from
	  existing path or resolving requested entry point does not work

2023-07-22  Simon Sobisch <simonsobisch@gnu.org>

	* coblocal.h (COB_MAX_FIELD_SIZE_LINKAGE): new definition

2023-07-21  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (get_config_val): fixed output of "not set" for enum values
	* common.c (create_dumpfile): more details if dump could not be created

2023-07-18  Simon Sobisch <simonsobisch@gnu.org>
after suggestions by Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>
